# RuVector

./: .gitignore  Cargo.toml  MODEL_SWAP_TARGETS.md  README.md
.claude/: settings.json
crates/mcp-brain-server/static/: index.html  origin.html
crates/neural-trader-core/: README.md
crates/neural-trader-wasm/: Cargo.toml  Dockerfile.test
crates/neural-trader-wasm/src/: lib.rs
crates/neural-trader-wasm/tests/: node-smoke.mjs
crates/ruvector-sparse-inference-wasm/src/: lib.rs
crates/ruvllm/: Cargo.toml
crates/ruvllm/src/metal/: buffers.rs
crates/ruvllm/tests/: pi_quant_tests.rs
crates/rvf/rvf-node/src/: lib.rs
crates/sona/src/: napi.rs  reasoning_bank.rs
crates/sona/src/loops/: coordinator.rs
docs/adr/: ADR-040-causal-atlas-rvf-runtime-planet-detection.md  ADR-080-npx-ruvector-deep-capability-audit.md  ADR-086-neural-trader-wasm.md
docs/cnn/: index.html
examples/data/discoveries/: cross_domain_correlations.json  swarm_airquality.json  swarm_apod.json  swarm_arxiv.json  swarm_asteroids.json  swarm_biodiversity.json  swarm_climate.json  swarm_disease.json  swarm_flares.json  swarm_mars.json  swarm_natural_events.json  swarm_ocean.json  swarm_rivers.json
examples/google-cloud/src/: self_learning.rs
examples/onnx-embeddings/src/: model.rs
examples/rvf/dashboard/src/three/: PlanetSystem3D.ts
examples/rvf/dashboard/src/views/: PlanetDashboard.ts
examples/rvf/examples/: microlensing_detection.rs  planet_detection.rs
examples/train-discoveries/: Cargo.toml
