[package]
name = "neural-trader-wasm"
version = "0.1.1"
edition = "2021"
license = "MIT"
publish = false
description = "WASM bindings for Neural Trader — market events, coherence gates, replay memory"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
neural-trader-core = { path = "../neural-trader-core" }
neural-trader-coherence = { path = "../neural-trader-coherence" }
neural-trader-replay = { path = "../neural-trader-replay" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
