[package]
name = "train-discoveries"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-domain discovery training and similarity search using RuVector"

[dependencies]
ruvector-core = { path = "../../crates/ruvector-core", default-features = false, features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
